# ada-product-service

./: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
product_service/: crud.py  main.py  pubsub.py  schemas.py
product_service/migrations/: alembic.ini  env.py
product_service/migrations/versions/: 3f7692b07d46_update_models.py  60bc04d1f0ee_don_t_index_brand_and_model.py  6a38177398c2_add_admin_id_in_the_product.py  6cb360748a37_add_product_model.py
product_service/models/: product.py
